<package>
    <name>navigation_layers</name>
    <version>0.2.1</version>
    <description>Extra navigation layers.</description>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <author>David V. Lu!!</author>
    <license>BSD</license>  

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>range_sensor_layer</run_depend>
    <export>
        <metapackage/>
    </export>
</package>
