<package>
  <name>range_sensor_layer</name>
  <description>
     Navigation Layer for Range sensors like sonar and IR
  </description>
  <version>0.3.1</version>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <author>David!!</author>

  <license>BSD</license>

  <url>http://wiki.ros.org/range_sensor_layer</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
