<package format="2">
  <name>range_sensor_layer</name>
  <version>0.4.0</version>
  <description>
     Navigation Layer for Range sensors like sonar and IR
  </description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <author>David!!</author>

  <license>BSD</license>

  <url>http://wiki.ros.org/range_sensor_layer</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
