<package>
  <name>sonar_layer</name>
  <description>
     sonar_layer
  </description>
  <version>0.1.0</version>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <author>David!!</author>

  <license>BSD</license>

  <url>http://wiki.ros.org/sonar_layer</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>


