<package format="2">
  <name>range_sensor_layer</name>
  <version>0.5.0</version>
  <description>
     Navigation Layer for Range sensors like sonar and IR
  </description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <author>David!!</author>

  <license>BSD</license>

  <url>http://wiki.ros.org/range_sensor_layer</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <test_depend>roslint</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
